# GTest

./: CMakeLists.txt  README.md  build_and_test.sh  build_project.sh  run_tests.sh
src/: sample.cpp  sample.h
test/: new_test.cpp  sample_test.cpp
